<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_page"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/favorite_menu"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/theme_page"
        android:title="@string/theme_menu"
        />

</menu>